added jupyter lab

--- a/environment.yaml
+++ b/environment.yaml
@@ -6,6 +6,7 @@ dependencies:
   - pip:
     #- e . # install package from current directory
     - pre-commit
+    - jupyterlab
     - nltk
     - matplotlib
     - seaborn
